WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272398
Grant should be invalidated on the granter queue
https://bugs.webkit.org/show_bug.cgi?id=272398
Summary
Grant should be invalidated on the granter queue
Per Arne Vollan
Reported
2024-04-09 08:04:19 PDT
Grant should be invalidated on the granter queue and not on the main thread.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2024-04-09 08:05:15 PDT
<
rdar://problem/125984025
>
Per Arne Vollan
Comment 2
2024-04-09 08:09:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27032
EWS
Comment 3
2024-04-09 12:11:39 PDT
Committed
277260@main
(7516bd41dd6f): <
https://commits.webkit.org/277260@main
> Reviewed commits have been landed. Closing PR #27032 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug