Grant should be invalidated on the granter queue https://bugs.webkit.org/show_bug.cgi?id=272398 rdar://125984025

Reviewed by Chris Dumez.

Grant should be invalidated on the granter queue and not on the main thread.

* Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.h:
* Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.mm:
(WebKit::ExtensionCapabilityGrant::operator=): Deleted.
* Source/WebKit/UIProcess/Cocoa/ExtensionCapabilityGranter.mm:
(WebKit::finalizeGrant):

Canonical link: https://commits.webkit.org/277260@main